# bocchi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/bocchi/: Cargo.toml
crates/bocchi/src/: bot.rs  caller.rs  error.rs  lib.rs  plugin.rs
crates/bocchi/src/adapter/: error.rs  mod.rs  ws.rs
crates/bocchi/src/chain/: handler.rs  matcher.rs  mod.rs  rule.rs
crates/bocchi/src/schema/: api.rs  emoji.rs  event.rs  message.rs  mod.rs
crates/bocchi_bot/: Cargo.toml
crates/bocchi_bot/src/: main.rs  migrate.rs  runtime.rs
crates/bocchi_bot/src/model/: memory.rs  mod.rs  points.rs
crates/bocchi_bot/src/plugin/: mod.rs
crates/bocchi_bot/src/plugin/bonus/: mod.rs
crates/bocchi_bot/src/plugin/check_in/: mod.rs
crates/bocchi_bot/src/plugin/daily_bonus/: mod.rs
crates/bocchi_bot/src/plugin/docker/: mod.rs
crates/bocchi_bot/src/plugin/echo/: mod.rs
crates/bocchi_bot/src/plugin/gpt/: markdown.rs  mod.rs
crates/bocchi_bot/src/plugin/hacker_news/: mod.rs
crates/bocchi_bot/src/plugin/ip/: mod.rs
crates/bocchi_bot/src/plugin/repeat/: mod.rs
crates/bocchi_bot/src/plugin/select/: mod.rs
crates/bocchi_bot/src/plugin/signin/: mod.rs
crates/bocchi_bot/src/plugin/url_detail/: bilibili.rs  mod.rs  pixiv.rs  spotify.rs  steam.rs  x.rs  youtube.rs
crates/bocchi_bot/src/plugin/video_detail/: bilibili.rs  mod.rs  youtube.rs
crates/bocchi_bot/src/plugin/what_to_eat/: mod.rs
crates/bocchi_bot/src/utils/: markdown.rs  mod.rs  request.rs
src/: bot.rs  caller.rs  main.rs
src/adapter/: mod.rs  ws.rs
src/chain/: handler.rs  matcher.rs  mod.rs  rule.rs
src/connector/: error.rs  mod.rs  ws.rs
src/matcher/: handler.rs  matcher.rs  mod.rs  rule.rs
src/schema/: api.rs  event.rs  message.rs  mod.rs
