[workspace]
members = ["crates/*"]
default-members = ["crates/bocchi_bot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["amtoaer <amtoaer@gmail.com>"]
license = "MIT"
description = "基于 Tokio 的异步 OneBot 11 客户端实现"
edition = "2021"
publish = false

[workspace.dependencies]
bocchi = { path = "crates/bocchi", features = ["napcat"] }
tokio-tungstenite = { version = "0.23.1", features = [] }
tokio = { version = "1.40.0", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "rt",
    "process",
] }
anyhow = "1.0.86"
serde_json = "1.0.127"
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
enum_dispatch = "0.3.13"
async-trait = "0.1.82"
dashmap = "6.0.1"
rand = "0.8.5"
thiserror = "1.0.63"
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0.209", features = ["derive"] }
enum-as-inner = "0.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
native_db = "0.7.1"
native_model = "0.4.19"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "http2",
    "charset",
    "rustls-tls",
    "json",
], default-features = false }
fantoccini = { version = "0.21.2", features = [
    "rustls-tls",
], default-features = false }
async-tempfile = "0.6.0"
pulldown-cmark = { version = "0.12.1", features = ["simd"] }
aho-corasick = "1.1.3"
rustls = "0.23.12"
futures = "0.3.30"
tokio-stream = { version = "0.1.16", features = ["fs"] }
base64-simd = "0.8.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
