[workspace]
members = ["crates/*"]
default-members = ["crates/bocchi_bot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["amtoaer <amtoaer@gmail.com>"]
license = "MIT"
description = "基于 Tokio 的异步 OneBot 11 客户端实现"
edition = "2021"
publish = false

[workspace.dependencies]
bocchi = { path = "crates/bocchi", features = ["napcat"] }
tokio-tungstenite = { version = "0.24.0", features = [] }
tokio = { version = "1.41.0", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "rt",
    "process",
] }
anyhow = "1.0.92"
serde_json = "1.0.132"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.1.0"
enum_dispatch = "0.3.13"
async-trait = "0.1.83"
dashmap = "6.1.0"
rand = "0.8.5"
thiserror = "1.0.66"
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0.214", features = ["derive"] }
enum-as-inner = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
native_db = "0.7.1"
native_model = "0.4.20"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = [
    "http2",
    "charset",
    "rustls-tls",
    "json",
], default-features = false }
fantoccini = { version = "0.21.2", features = [
    "rustls-tls",
], default-features = false }
async-tempfile = "0.6.0"
pulldown-cmark = { version = "0.12.2", features = ["simd"] }
aho-corasick = "1.1.3"
rustls = "0.23.16"
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["fs"] }
base64-simd = "0.8.0"
regex = "1.11.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
