[workspace]
members = ["crates/*"]
default-members = ["crates/bocchi_bot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["amtoaer <amtoaer@gmail.com>"]
license = "MIT"
description = "基于 Tokio 的异步 OneBot 11 客户端实现"
edition = "2024"
publish = false

[workspace.dependencies]
bocchi = { path = "crates/bocchi", features = ["lagrange"] }
tokio-tungstenite = { version = "0.26.2", features = [] }
tokio = { version = "1.45.0", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "rt",
    "process",
] }
anyhow = "1.0.98"
bollard = "0.18.1"
serde_json = "1.0.140"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
enum_dispatch = "0.3.13"
async-trait = "0.1.88"
dashmap = "6.1.0"
rand = "0.9.1"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["display"] }
serde = { version = "1.0.219", features = ["derive"] }
enum-as-inner = "0.6.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
native_db = "0.8.1"
native_model = "0.4.20"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = [
    "http2",
    "charset",
    "rustls-tls",
    "json",
], default-features = false }
fantoccini = { version = "0.21.5", features = [
    "rustls-tls",
], default-features = false }
async-tempfile = "0.7.0"
pulldown-cmark = { version = "0.13.0", features = ["simd"] }
aho-corasick = "1.1.3"
rustls = "0.23.27"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["fs"] }
base64-simd = "0.8.0"
regex = "1.11.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
