[package]
name = "bocchi"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "../../README.md"

[features]
napcat = []
go-cqhttp = []
lagrange = []

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
enum_dispatch = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
enum-as-inner = { workspace = true }
tracing = { workspace = true }
