[package]
name = "bocchi_bot"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "../../README.md"

[dependencies]
bocchi = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
markdown = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
